feat: improve event bus