@@ -7,17 +7,15 @@ import cc.allio.uno.core.bus.event.Listener;
 import cc.allio.uno.core.bus.event.Node;
 import cc.allio.uno.core.util.id.IdGenerator;
 import cc.allio.uno.core.util.list.LockFreeArrayList;
-import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
-import com.google.common.util.concurrent.Atomics;
 import lombok.extern.slf4j.Slf4j;
 import reactor.core.publisher.Mono;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReferenceArray;
 import java.util.function.Consumer;
 import java.util.function.LongConsumer;
 
@@ -32,29 +30,28 @@ import java.util.function.LongConsumer;
 public class Sentinel<C extends EventContext> {
 
     private final EventBus<C> eventBus;
-
     // notification Topic Key
     private final TopicKey ncKey;
-
-    final List<WorkNode<C>> nodes;
-
-    public static final String SIGNAL_STRING = "signal";
-
+    final List<WorkerNode<C>> subscribers;
     final AtomicBoolean shouldSignal = new AtomicBoolean(true);
 
-    public Sentinel(String path, EventBus<C> eventBus) {
-        if (path.endsWith(SIGNAL_STRING)) {
+    // record idled workers
+    private final List<Worker<C>> idleWorkers;
+
+    public Sentinel(TopicKey topicKey, EventBus<C> eventBus) {
+        if (Worker.match(topicKey)) {
             log.warn("The topic path is signal path, sentinel will be disabled.");
             shouldSignal.compareAndSet(true, false);
         }
-
         this.eventBus = eventBus;
         if (shouldSignal.get()) {
-            this.ncKey = TopicKey.create(path + StringPool.SLASH + SIGNAL_STRING);
-            this.nodes = new LockFreeArrayList<>(1);
+            this.ncKey = SignalWorker.createTopicKey(topicKey.getPath());
+            this.subscribers = new LockFreeArrayList<>(1);
+            this.idleWorkers = new LockFreeArrayList<>(1);
         } else {
             this.ncKey = null;
-            this.nodes = null;
+            this.subscribers = null;
+            this.idleWorkers = null;
         }
     }
 
@@ -67,7 +64,14 @@ public class Sentinel<C extends EventContext> {
         if (!shouldSignal.get()) {
             return false;
         }
-        return nodes.add(new WorkNode<>(subscriber));
+        Long subscribeId = subscriber.getSubscribeId();
+        for (WorkerNode<C> workerNode : subscribers) {
+            if (workerNode.getSubscribeId().equals(subscribeId)) {
+                log.warn("subscriber[subscribe id {} - path {}] existing current sentinel ", subscribeId, subscriber.getTopic().getPath());
+                return false;
+            }
+        }
+        return subscribers.add(new WorkerNode<>(subscriber));
     }
 
     /**
@@ -81,17 +85,21 @@ public class Sentinel<C extends EventContext> {
         }
 
         int index = -1;
-        for (int i = 0; i < nodes.size(); i++) {
-            Node<C> node = nodes.get(i);
+        for (int i = 0; i < subscribers.size(); i++) {
+            Node<C> node = subscribers.get(i);
             if (node.getSubscribeId().equals(subscriberId)) {
                 index = i;
             }
         }
 
-        if (index > 0) {
-            return nodes.remove(index) != null;
+        if (index >= 0) {
+            WorkerNode<C> subscriber = subscribers.remove(index);
+            if (subscriber != null) {
+                subscriber.release();
+                return true;
+            }
         }
-        return true;
+        return false;
     }
 
     /**
@@ -104,7 +112,11 @@ public class Sentinel<C extends EventContext> {
         if (!shouldSignal.get()) {
             return;
         }
-        Worker.doSignal(List.copyOf(nodes), eventBus, context, ncKey);
+        if (subscribers.isEmpty()) {
+            List<Worker<C>> temporal = Worker.kindOfAll(Collections.emptyList(), eventBus, context, ncKey);
+            idleWorkers.addAll(temporal);
+        }
+        Worker.doSignal(List.copyOf(subscribers), eventBus, context, ncKey);
     }
 
     /**
@@ -116,19 +128,21 @@ public class Sentinel<C extends EventContext> {
         if (!shouldSignal.get()) {
             return false;
         }
-        return findNode(subscribeId)
-                .map(WorkNode::complete)
-                .orElse(false);
+        // if subscriber is empty idle all worker.
+        if (subscribers.isEmpty()) {
+            return idleWorkers.stream().allMatch(Worker::idle);
+        }
+        return findNode(subscribeId).map(WorkerNode::complete).orElse(false);
     }
 
-    public Optional<WorkNode<C>> findNode(Long subscribeId) {
-        return nodes.stream().filter(node -> node.getSubscribeId().equals(subscribeId)).findFirst();
+    public Optional<WorkerNode<C>> findNode(Long subscribeId) {
+        return subscribers.stream().filter(node -> node.getSubscribeId().equals(subscribeId)).findFirst();
     }
 
     /**
      * the sentinel worker
      */
-    interface Worker<C extends EventContext> {
+    public interface Worker<C extends EventContext> {
 
         /**
          * get unique id
@@ -143,20 +157,64 @@ public class Sentinel<C extends EventContext> {
         /**
          * invoke work will be doing
          *
-         * @param node the node instance
+         * @param subscriber the subscriber instance
          * @return true if work is finish.
          */
-        boolean doing(WorkNode<?> node);
+        boolean doing(WorkerNode<?> subscriber);
+
+        /**
+         * invoke work will be doing.
+         *
+         * @return true if work is finish.
+         */
+        boolean idle();
+
+        /**
+         * worker is finish work
+         *
+         * @return ture is finish
+         */
+        boolean isFinished();
+
+        /**
+         * remove the subscriber
+         *
+         * @param subscriber
+         */
+        void remove(WorkerNode<C> subscriber);
+
+        /**
+         * of all kind worker.
+         */
+        static <C extends EventContext> List<Worker<C>> kindOfAll(List<WorkerNode<C>> runningSubscribers,
+                                                                  EventBus<C> eventBus,
+                                                                  C context,
+                                                                  TopicKey ncKey) {
+            SignalWorker<C> signalWorker = new SignalWorker<>(runningSubscribers, eventBus, context, ncKey);
+            signalWorker.prepare();
+            return List.of(signalWorker);
+        }
 
         /**
          * work of signal
          */
-        static <C extends EventContext> void doSignal(List<WorkNode<?>> runningNodes,
+        static <C extends EventContext> void doSignal(List<WorkerNode<C>> runningSubscribers,
                                                       EventBus<C> eventBus,
                                                       C context,
                                                       TopicKey ncKey) {
-            new SignalWorker<>(runningNodes, eventBus, context, ncKey).prepare();
+            new SignalWorker<>(runningSubscribers, eventBus, context, ncKey).prepare();
         }
+
+        /**
+         * determine path is match
+         *
+         * @param topicKey the
+         * @return {@code true} if
+         */
+        static boolean match(TopicKey topicKey) {
+            return topicKey.getPath().endsWith(SignalWorker.SIGNAL_STRING);
+        }
+
     }
 
     /**
@@ -175,18 +233,19 @@ public class Sentinel<C extends EventContext> {
     public static class SignalWorker<C extends EventContext> implements Worker<C> {
 
         private final Long id;
-        private final List<WorkNode<?>> runningNodes;
+        private final List<WorkerNode<C>> runningSubscribers;
         private final EventBus<C> eventBus;
         private final C context;
         private final TopicKey ncKey;
         private final Map<Long, AtomicBoolean> completed;
+        public static final String SIGNAL_STRING = "signal";
 
-        SignalWorker(List<WorkNode<?>> runningNodes,
+        SignalWorker(List<WorkerNode<C>> runningSubscribers,
                      EventBus<C> eventBus,
                      C context,
                      TopicKey ncKey) {
             this.id = IdGenerator.defaultGenerator().getNextId();
-            this.runningNodes = runningNodes;
+            this.runningSubscribers = new LockFreeArrayList<>(runningSubscribers);
             this.eventBus = eventBus;
             this.context = context;
             this.completed = Maps.newConcurrentMap();
@@ -199,73 +258,139 @@ public class Sentinel<C extends EventContext> {
         }
 
         @Override
-        public boolean doing(WorkNode<?> node) {
+        public boolean doing(WorkerNode<?> node) {
             return complete(node.getSubscribeId());
         }
 
         @Override
+        public boolean idle() {
+            onFinish();
+            return true;
+        }
+
+        @Override
+        public boolean isFinished() {
+            return completed.values().stream().allMatch(AtomicBoolean::get);
+        }
+
+        @Override
+        public void remove(WorkerNode<C> subscriber) {
+            runningSubscribers.remove(subscriber);
+            completed.remove(subscriber.getSubscribeId());
+        }
+
+        @Override
         public void prepare() {
-            for (WorkNode<?> node : runningNodes) {
+            for (WorkerNode<C> subscriber : runningSubscribers) {
                 // set each node completed flag is false
-                this.completed.put(node.getSubscribeId(), new AtomicBoolean(false));
+                this.completed.put(subscriber.getSubscribeId(), new AtomicBoolean(false));
                 // observe Work Node
-                node.observe(this);
+                subscriber.observe(this);
             }
         }
 
         public boolean complete(Long subscribeId) {
-            // first check exist subscriber
-            if (completed.containsKey(subscribeId)) {
-                // substitution completed flag and check all is completion
-                boolean workingDone =
-                        completed.get(subscribeId).compareAndSet(false, true)
-                                && isCompletion();
-                if (workingDone) {
-                    notification();
-                    // reduce worker in nodes
-                    for (WorkNode<?> node : runningNodes) {
-                        node.finish(this);
-                    }
-                }
-                return workingDone;
+            // check is completion
+            boolean workingDone = checkCompletion(subscribeId);
+            if (workingDone) {
+                onFinish();
+                return true;
             }
-            return false;
+            workingDone =
+                    completed.get(subscribeId).compareAndSet(false, true)
+                            && checkCompletion(subscribeId);
+            if (workingDone) {
+                onFinish();
+            }
+            return workingDone;
         }
 
-        /**
-         * judgment all node is subscribe is complete.
-         */
-        boolean isCompletion() {
-            return completed.values().stream().allMatch(AtomicBoolean::get);
+        void onFinish() {
+            // reduce worker in nodes
+            for (WorkerNode<C> subscribers : runningSubscribers) {
+                subscribers.finish(this);
+            }
+            eventBus.publish(ncKey, context).subscribe();
         }
 
-        void notification() {
-            eventBus.publish(ncKey, context);
+        boolean checkCompletion(Long subscribeId) {
+            return completed.containsKey(subscribeId)
+                    && completed.get(subscribeId).get()
+                    && isFinished();
+        }
+
+
+        // {path}@signal
+        public static TopicKey createTopicKey(String path) {
+            return TopicKey.of(path + StringPool.AT + SIGNAL_STRING);
         }
     }
 
-    public static class WorkNode<C> implements Node<C> {
+    public static class WorkerNode<C extends EventContext> implements Node<C> {
 
         private final Node<C> actual;
+        // record unfinished worker
+        private final List<Worker<C>> workers;
+        private final List<Worker<C>> finishedWorkers;
 
-        private final List<Worker<?>> workers;
-
-        public WorkNode(Node<C> actual) {
+        public WorkerNode(Node<C> actual) {
             this.actual = actual;
             this.workers = new LockFreeArrayList<>(1);
+            this.finishedWorkers = new LockFreeArrayList<>(1);
         }
 
-        void observe(Worker<?> worker) {
+        void observe(Worker<C> worker) {
             this.workers.add(worker);
         }
 
+        /**
+         * invoke worker node complete do work.
+         *
+         * @return {@code true} if workers done. otherwise workers is empty return false
+         */
         boolean complete() {
-            return workers.stream()
-                    .allMatch(worker -> worker.doing(this));
+            // first adjust already finish worker. and remove it
+            removeWorkers();
+            if (workers.isEmpty()) {
+                return false;
+            }
+            // do work and judgment current work is finish
+            AtomicBoolean done = new AtomicBoolean(false);
+            for (Worker<C> worker : workers) {
+                done.compareAndSet(false, worker.doing(this));
+            }
+            // second current workers finish.
+            removeWorkers();
+            return done.get();
         }
 
-        void finish(Worker<?> worker) {
-            workers.removeIf(w -> w.getId().equals(worker.getId()));
+        void finish(Worker<C> worker) {
+            if (workers.contains(worker)) {
+                finishedWorkers.add(worker);
+            }
+        }
+
+        // free-lock remove worker.
+        // base-on recorded finished workers list.
+        void removeWorkers() {
+            // ensure finish worker from workers list remove
+            for (Worker<C> worker : finishedWorkers) {
+                workers.remove(worker);
+            }
+            // clear finish work
+            finishedWorkers.clear();
+        }
+
+        // maybe occurrence illusion.
+        public List<Worker<C>> getUnfinishedWorkers() {
+            return workers;
+        }
+
+        // when detach worker node invoke
+        void release() {
+            // notify all workers remove current node
+            workers.forEach(worker -> worker.remove(this));
+            removeWorkers();
         }
 
         @Override
@@ -274,7 +399,7 @@ public class Sentinel<C extends EventContext> {
         }
 
         @Override
-        public Topic<?> getTopic() {
+        public Topic<C> getTopic() {
             return actual.getTopic();
         }
 
